<resources>
    <!-- LANG -->
    <string name="current_lang">en</string>
    <!-- APP NAME -->
    <string name="app_name" translatable="false">ADL App</string>
    <!-- TITLES -->
    <string name="title_analyzer">Analyzer</string>
    <string name="title_learning">Learning</string>
    <string name="title_personal">Personal</string>
    <string name="title_settings">Settings</string>
    <!-- SETTINGS -->
    <string name="settings_server_destination_title">Destination</string>
    <string name="settings_server_port_title">Port</string>
    <string name="settings_server_category_title">Server</string>
    <string name="settings_timer_category_title">Timers</string>
    <string name="settings_timer_preparation_seconds_title">Preparation seconds</string>
    <string name="settings_theme_category_title">Theme and colors</string>
    <string name="settings_theme_dark_mode_title">Dark mode</string>
    <string name="settings_theme_changed_alert">The changes will take effect when the app is restarted.</string>
    <!-- ANALYZER -->
    <string name="analyzer_service_channel_description">Analyzing in progress…</string>
    <string name="analyzer_service_channel_name">Analyzer Service</string>
    <string name="analyzer_fragment_activity_label">Analyzed activity…</string>
    <string name="analyzer_service_start">Analyzing…</string>
    <string name="analyzer_service_preparation_countdown">Starting in %1$d seconds.</string>
    <!-- LEARNING -->
    <string name="learning_fragment_activity_selector_textview">Select an activity…</string>
    <string name="learning_fragment_selected_configuration_textview">Selected configuration</string>
    <string name="learning_fragment_tts_activity_started">Activity just started</string>
    <string name="learning_fragment_countdown_textview">Learning Countdown</string>
    <string name="learning_service_channel_description">Learning in progress…</string>
    <string name="learning_service_channel_name">Learning Service</string>
    <!-- PERSONAL -->
    <string name="personal_fragment_saved">Data saved successfully.</string>
    <string name="personal_fragment_not_saved">Error: data not saved.</string>
    <string name="personal_fragment_loader">Loading…</string>
    <!-- ERRORS -->
    <string name="error_server_connection">Error to connect to the server.</string>
    <!-- TTS -->
    <string name="tts_analysis_almost_started">Analysis is about to begin.</string>
    <string name="tts_analysis_started">Analysis just started.</string>
    <string name="tts_learning_almost_started">Learning is about to begin.</string>
    <string name="tts_learning_started">Learning just started.</string>
    <string name="tts_prediction">Activity predicted is %1$s.</string>
    <!-- OTHERS / ALL -->
    <string name="start_button">Start</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>

    <string name="phone_position_selector_label">Where is the phone?</string>
    <string name="phone_position_in_hand">In hand</string>
    <string name="phone_position_in_the_pocket">In the pocket</string>
    <string name="phone_position_in_the_front_left_pocket">In the front left pocket</string>
    <string name="phone_position_in_the_front_right_pocket">In the front right pocket</string>
    <string name="phone_position_in_the_back_left_pocket">In the back left pocket</string>
    <string name="phone_position_in_the_back_right_pocket">In the back right pocket</string>
    <string name="phone_position_in_left_hand">In left hand</string>
    <string name="phone_position_in_right_hand">In right hand</string>

    <string name="sensor_label">Sensors</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_status_unset" translatable="false">-</string>
    <string name="sensor_status_enabled">enabled</string>
    <string name="sensor_status_disabled">disabled</string>
    <string name="sensor_status_not_present">not present</string>

    <string name="alert_done">Done!</string>
    <string name="alert_almost_started">The activity is about to begin</string>
    <string name="alert_start">Activity started.</string>
    <string name="alert_stop">Activity stopped.</string>

</resources>
