<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_analyzer">

    <fragment
        android:id="@+id/navigation_analyzer"
        android:name="com.derogab.adlapp.ui.analyzer.AnalyzerFragment"
        android:label="@string/title_analyzer"
        tools:layout="@layout/fragment_analyzer" />

    <fragment
        android:id="@+id/navigation_learning"
        android:name="com.derogab.adlapp.ui.learning.LearningFragment"
        android:label="@string/title_learning"
        tools:layout="@layout/fragment_learning" />

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.derogab.adlapp.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />
</navigation>
